# STR-X

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  STR-X 1-1.jucer  STR-X.jucer  validate.sh
.github/workflows/: cmake.yml  deploy.yml
Source/: AmpComponent.hpp  Background.cpp  Background.h  Background.hpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PowerAmp.h  PreAmp.h  STR-X.h  STR-X.hpp  TS9.h
installer/: STR-X.pkgproj
manual/: STR-X.md  STR-X.typ  STR-X_manual.md
